--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="styles/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="styles/css/_base.css">
-    <link rel="stylesheet" type="text/css" href="styles/css/footer.css">
-    <link rel="stylesheet" type="text/css" href="styles/css/header.css">
-	<link rel="stylesheet" type="text/css" href="styles/css/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/bootstrap.css">    
+    <link rel="stylesheet" type="text/css" href="styles/css/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/css/home.css">
     <script type="text/javascript" src="scripts/vendors/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="scripts/vendors/bootstrap.js"></script>
     <script type="text/javascript" src="scripts/vendors/angular.min.js"></script>
@@ -21,11 +19,13 @@
 	<script src="http://localhost:35729/livereload.js"></script>
 </head>
 <body>
-
+<loader></loader>
 <div data-ng-include data-src="'views/header.html'"></div>
 <error-messages></error-messages>
 <!-- Views are injected here -->
+
 <div ng-view></div>
-</body>
 <div class="navbar-fixed-bottom cms-footer" data-ng-include data-src="'views/footer.html'"></div>
+</body>
+
 </html>
